@@ -23,7 +23,7 @@ plan(tests => 24);
 use Dwimmer::Client;
 
 my $admin = Dwimmer::Client->new( host => $url );
-is_deeply($admin->login( 'admin', $password ), {
+is_deeply($admin->login( username => 'admin', password => $password ), {
 	success   => 1,
 	username  => 'admin',
 	userid    => 1,
