@@ -25,7 +25,7 @@ my $user = Dwimmer::Client->new( host => $url );
 
 
 my $admin = Dwimmer::Client->new( host => $url );
-is_deeply($admin->login( 'admin', $password ), {
+is_deeply($admin->login( username => 'admin', password => $password ), {
 	success => 1,
 	username => 'admin',
 	userid   => 1,
