@@ -8,6 +8,9 @@
    Enable some special characters in the filename: space ( ), dot (.), $, @ and %.
    Eliminate cache from the Ajax get requests as IE (both 8 and 9) would cache by default.
 
+   Replace several methods in the Dwimmer::Client or change their APIs
+   most importantly 'login', 'get_page', 
+
 v0.11 2011.09.10
 
     Release of the first interesting version.
